# myblogwriting

./: .gitignore  README.md  pyproject.toml
.streamlit/: secrets.toml.example
docs/: mechanism-roadmap.md
ot_marketing/: README.md  __init__.py  __main__.py  cli.py  env_load.py  llm.py  local_llm.py  output_store.py  paths.py  workflows.py
prompts/: WORKFLOW_PROMPTS.generated.md  WORKFLOW_PROMPTS.md
prompts/infographic/: README.md  meta_build_image_prompt.md  spec_hero_ogp_infographic.md  spec_note_dx_workflow_infographic.md  spec_note_editorial_cinematic.md
prompts/note/: CHANGELOG.md  README.md  assemble.sh
prompts/note/sections/: 01_role.md  02_audience_intent.md  03_reader_outcome.md  04_voice_style_length.md  05_themes.md  06_confidentiality.md  07_links_cta.md  08_closing_required.md  09_author_background.md  99_task_input.md
prompts/ops/: README.md  note_from_theme.md  share_short_from_company.md
prompts/review/: README.md  evaluator_scored_generic.md
prompts/social-company-pipeline/: 01_writer_draft.md  02_external_evaluator.md  03_writer_refine.md  04_human_review_checklist.md  README.md
scripts/: gen_workflow_prompts.py  setup_teacher_blog_repo.sh
streamlit_ui/: README.md  handoff_common.py  manual_chain_app.py  manual_home.py  run.sh  run_manual_chain.sh
streamlit_ui/api/: README.md  streamlit_app.py
streamlit_ui/pages/: 01_note_handoff.py  02_sns_share.py  03_prompt_admin.py  04_archive.py
teacher/: README.md
