[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ot-marketing"
version = "0.1.0"
description = "One Technology Japan marketing prompts → LLM → outputs/"
readme = "ot_marketing/README.md"
requires-python = ">=3.9"
dependencies = [
  "anthropic>=0.40.0",
  "openai>=1.50.0",
  "python-dotenv>=1.0.0",
  "tomli>=2.0.0",
  "typer>=0.12.0",
]

[project.scripts]
otm = "ot_marketing.cli:main"

[project.optional-dependencies]
web = ["streamlit>=1.33.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ot_marketing"]
